# json-cpp-gen

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  configuration-parser-config.json  json-cpp-config-template.json
src/: AbsPath.cpp  AbsPath.h  Configuration.h  ContainerTemplate.h  Generator.cpp  Generator.h  HeaderParser.cpp  HeaderParser.h  LineEndingStats.cpp  LineEndingStats.h  NameFormat.cpp  NameFormat.h  Namespace.cpp  Namespace.h  ParserGenerator.cpp  ParserGenerator.h  QualifiedName.cpp  QualifiedName.h  SerializerGenerator.cpp  SerializerGenerator.h  StringSwitchTree.cpp  StringSwitchTree.h  Symbol.h  TemplateInstanceCache.cpp  TemplateInstanceCache.h  Type.cpp  Type.h  TypeName.cpp  TypeName.h  TypeSet.cpp  TypeSet.h  main.cpp  pattern-fill.cpp  pattern-fill.h  text-file-io.cpp  text-file-io.h
src/container-templates/: ArrayContainerTemplate.cpp  ArrayContainerTemplate.h  FixedArrayContainerTemplate.cpp  FixedArrayContainerTemplate.h  ObjectContainerTemplate.cpp  ObjectContainerTemplate.h  ObjectMapContainerTemplate.cpp  ObjectMapContainerTemplate.h  OptionalContainerTemplate.cpp  OptionalContainerTemplate.h  StaticArrayContainerTemplate.cpp  StaticArrayContainerTemplate.h
src/types/: ArrayContainerType.cpp  ArrayContainerType.h  BasicType.cpp  BasicType.h  ConstStringType.cpp  ConstStringType.h  ContainerType.cpp  ContainerType.h  DirectType.h  EnumType.cpp  EnumType.h  FixedArrayContainerType.cpp  FixedArrayContainerType.h  ObjectContainerType.cpp  ObjectContainerType.h  ObjectMapContainerType.cpp  ObjectMapContainerType.h  OptionalContainerType.cpp  OptionalContainerType.h  StaticArrayContainerType.cpp  StaticArrayContainerType.h  StaticArrayType.cpp  StaticArrayType.h  StringType.cpp  StringType.h  StructureType.cpp  StructureType.h  TypeAlias.cpp  TypeAlias.h
tests/: CMakeLists.txt  common.h  main.cpp  setup-case.cmake
tests/basic-case/: basic-case.cmake  basic-case.cpp  config.json  structures.h
tests/error-cases/: .gitignore  basic-alias-cycle.h  basic-alias-cycle.json  basic-inheritance-cycle.h  basic-inheritance-cycle.json
tests/multipass-1/: A.h  B.h  C.h  D.h  config.json  multipass-1.cmake  multipass-1.cpp
tests/multipass-2/: A.h  B.h  C.h  D.h  config.json  multipass-2.cmake  multipass-2.cpp
tests/multipass-3/: A.h  B.h  C.h  D.h  config.json  multipass-3.cmake  multipass-3.cpp
tests/namespaces/: A.h  B.h  C.h  D.h  config.json  namespaces.cmake  namespaces.cpp
tests/nested-type-alias/: components.h  config.json  nested-type-alias.cmake  nested-type-alias.cpp  root.h
tests/reverse-order-inputs/: 1.h  2.h  3.h  4.h  5.h  config.json  reverse-order-inputs.cmake  reverse-order-inputs.cpp
