
cmake_minimum_required(VERSION 3.15)

project(json-cpp-gen LANGUAGES CXX)

file(GLOB_RECURSE JSON_CPP_GEN_HEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "src/*.h" "generated/*.h")
file(GLOB_RECURSE JSON_CPP_GEN_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "src/*.cpp" "generated/*.cpp")

add_executable(${PROJECT_NAME} ${JSON_CPP_GEN_HEADERS} ${JSON_CPP_GEN_SOURCES})
target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_11)
set_property(TARGET ${PROJECT_NAME} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
if (MSVC)
    target_compile_definitions(${PROJECT_NAME} PUBLIC _CRT_SECURE_NO_WARNINGS)
endif()

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${JSON_CPP_GEN_HEADERS} ${JSON_CPP_GEN_SOURCES})
set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
